// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Profiles /> renders the <Profiles /> with populated data 1`] = `
<div
  class="profiles__Container-sc-1xu3wi0-0 dRRlwt"
>
  <h1
    class="profiles__Title-sc-1xu3wi0-1 igvrNJ"
  >
    Who's watching?
  </h1>
  <ul
    class="profiles__List-sc-1xu3wi0-2 jwvOsy"
  >
    <li
      class="profiles__Item-sc-1xu3wi0-5 duqpYw"
    >
      <img
        class="profiles__Picture-sc-1xu3wi0-4 iFnJqZ"
        data-testid="profile-picture"
        src="/images/users//images/karl.png.png"
      />
      <p
        class="profiles__Name-sc-1xu3wi0-3 eyulbC"
      >
        Karl
      </p>
    </li>
  </ul>
</div>
`;

exports[`<Profiles /> renders the <Profiles /> with populated data but misc profile image 1`] = `
<div
  class="profiles__Container-sc-1xu3wi0-0 dRRlwt"
>
  <h1
    class="profiles__Title-sc-1xu3wi0-1 igvrNJ"
  >
    Who's watching?
  </h1>
  <ul
    class="profiles__List-sc-1xu3wi0-2 jwvOsy"
  >
    <li
      class="profiles__Item-sc-1xu3wi0-5 duqpYw"
    >
      <img
        class="profiles__Picture-sc-1xu3wi0-4 iFnJqZ"
        data-testid="profile-picture-misc"
        src="/images/misc/loading.gif"
      />
      <p
        class="profiles__Name-sc-1xu3wi0-3 eyulbC"
      >
        Karl
      </p>
    </li>
  </ul>
</div>
`;
